--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
-    "/assets/admin/js/app.js": "/assets/admin/js/app.js?id=dfde3bb5860ddfdb4e26",
-    "/assets/admin/css/app.css": "/assets/admin/css/app.css?id=7d25dbc4c938346e0a7c",
-    "/assets/css/app.css": "/assets/css/app.css?id=455d45cfc6663204d664",
-    "/assets/js/app.js": "/assets/js/app.js?id=0bb8d72f5bff5c6d2e3d"
+    "/assets/js/app.js": "/assets/js/app.js?id=351f74418578f154d613",
+    "/assets/css/app.css": "/assets/css/app.css?id=e4803cd4c909019d7842"
 }
