--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/framework": "^8.0",
         "laravel/helpers": "^1.1",
         "laravel/tinker": "^2.0",
+        "spatie/laravel-honeypot": "^4.3",
         "spatie/laravel-translatable": "^4.1",
         "tymon/jwt-auth": "1.0.x-dev"
     },
