--- a/composer.json
+++ b/composer.json
@@ -10,25 +10,23 @@
     "require": {
         "php": "^8.1",
         "doctrine/dbal": "^2.9",
-        "facade/ignition": "^2.3.6",
-        "fideloper/proxy": "^4.0",
+        "spatie/laravel-ignition": "^1.0",
         "fruitcake/laravel-cors": "^3.0",
         "guzzlehttp/guzzle": "^7.7",
         "intervention/image": "^2.5",
         "intervention/imagecache": "^2.4",
-        "laravel/framework": "^8.0",
+        "laravel/framework": "^9.0",
         "laravel/helpers": "^1.1",
         "laravel/tinker": "^2.0",
         "spatie/laravel-honeypot": "^4.3",
-        "spatie/laravel-translatable": "^4.1",
-        "tymon/jwt-auth": "1.0.x-dev"
+        "tymon/jwt-auth": "2.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^5.0",
+        "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.0"
     },
     "config": {
